<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewMail.NewMailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/button_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/till"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/mne"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/skriv_ett_e_postmeddelande"
                android:inputType="textCapSentences" />

        </LinearLayout>


        <Button
            android:id="@+id/button_back"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/tillbaka"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_send"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/skicka"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_back" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>